--- a/GenomePrj/Info.plist
+++ b/GenomePrj/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Permite que GenomePrj acceda a la cámara</string>
 </dict>
 </plist>
